--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -18,7 +18,7 @@
   }
 
   body {
-    @apply bg-background text-text antialiased min-h-screen min-w-[320px] overflow-x-hidden;
+    @apply bg-background text-gray-800 antialiased min-h-screen min-w-[320px] overflow-x-hidden;
   }
 }
 
